--- a/python_assignment1.ipynb
+++ b/python_assignment1.ipynb
@@ -6,7 +6,8 @@
       "name": "python_assignment1",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN3coX2wpSa4f27eFCOe9RX"
+      "authorship_tag": "ABX9TyN3coX2wpSa4f27eFCOe9RX",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/devil-cyber/assignment/blob/master/python_assignment1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
